--- a/index.html
+++ b/index.html
@@ -7,32 +7,13 @@
     <title>Motion Sensorsサンプル</title>
     <script src="static/js/jquery-3.0.0.min.js" type="text/javascript"></script>
     <script src="static/js/d3.min.js" type="text/javascript"></script>
-    <script>
-      window.addEventListener("devicemotion", function(event1){
-        var x = event1.accelerationIncludingGravity.x;
-        var y = event1.accelerationIncludingGravity.y;
-        var z = event1.accelerationIncludingGravity.z;
-        var result1 = document.getElementById("result1");
-        result1.innerHTML =
-          "X："+ Math.round(x * 10) / 10 +"<br>" +
-          "Y："+ Math.round(y * 10) / 10 +"<br>" +
-          "Z："+ Math.round(z * 10) / 10;
-      }, true);
-
-      window.addEventListener('deviceorientation', function(event2) {
-            var alpha = event2.alpha;
-            var beta = event2.beta;
-            var gamma = event2.gamma;
-
-        result2.innerHTML =
-          "alpha："+ Math.round(alpha * 10) / 10 +"<br>" +
-          "beta："+ Math.round(beta * 10) / 10 +"<br>" +
-          "gamma："+ Math.round(gamma * 10) / 10;
-        }, true);
-    </script>
   </head>
   <body>
-    <div id="result1"></div>
+    <div id="dev_orient" class="dev_orient">
+      <div class="alpha"></div>
+      <div class="beta"></div>
+      <div class="gamma"></div>
+    </div>
     <div id="result2"></div>
     <div id="d3graph_x"></div>
     <div id="d3graph_y"></div>
@@ -109,5 +90,6 @@
                    .attr("opacity", 1);
     }
     </script>
+    <script src="static/js/index.js" type="text/javascript"></script>
   </body>
 </html>
