--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
-    <title>Motion Sensorsサンプル</title>
+    <title>android sensor</title>
     <script src="static/js/jquery-3.0.0.min.js" type="text/javascript"></script>
     <script src="static/js/d3.min.js" type="text/javascript"></script>
   </head>
