--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
+    <link rel="stylesheet" href="static/css/index.css"/>
+    
     <title>android sensor</title>
     <script src="static/js/jquery-3.0.0.min.js" type="text/javascript"></script>
     <script src="static/js/d3.min.js" type="text/javascript"></script>
@@ -25,6 +27,7 @@
     <div id="graph_alpha"></div>
     <div id="graph_beta"></div>
     <div id="graph_gamma"></div>
+    <div id="graph_test"></div>
     <script src="static/js/index.js" type="text/javascript"></script>
   </body>
 </html>
